--- a/web/src/styles/components/UI/Language.scss
+++ b/web/src/styles/components/UI/Language.scss
@@ -11,22 +11,22 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-}
 
-.language-name p {
-    margin: 0;
-}
+    & p {
+        margin: 0;
+    }
 
-.language-name img {
-    width: 99px;
-    height: 99px;
-    border-radius: 20px;
+    & img {
+        width: 99px;
+        height: 99px;
+        border-radius: 20px;
+    }
 }
 
 .language-frame-works {
     margin: 0;
-}
 
-.language-additional-tools p {
-    margin: 0;
+    & p {
+        margin: 0;
+    }
 }
