--- a/web/src/styles/components/UI/Offer.scss
+++ b/web/src/styles/components/UI/Offer.scss
@@ -3,7 +3,7 @@
     width: 30%;
     flex: auto;
     flex-shrink: 0;
-    outline: 1px solid rgba(255,255,255,.2);
+    outline: 1px solid rgba(255, 255, 255, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,17 +17,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 2px solid rgba(255,255,255,.5);
-    border-left: 2px solid rgba(255,255,255,.5);
+    border-top: 2px solid var(--additional-color-3);
+    border-left: 2px solid var(--additional-color-3);
     border-radius: 100%;
     margin-bottom: 1.5rem;
     padding: 1rem;
-    background-image: linear-gradient(315deg,rgba(255,255,255,0),rgba(255,255,255,.15));
-}
+    background-image: linear-gradient(
+        315deg,
+        rgba(255, 255, 255, 0),
+        var(--additional-color-2)
+    );
 
-.offer-icon img {
-    width: 100%;
-    height: 100%;
+    & img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .offer-block-text {
@@ -35,20 +39,20 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
 
-.offer-block-text .big-text {
-    margin: 0;
-    max-width: 100%;
-    text-align: center;
-    overflow-wrap: anywhere;
-}
+    & .big-text {
+        margin: 0;
+        max-width: 100%;
+        text-align: center;
+        overflow-wrap: anywhere;
+    }
 
-.offer-block-text .small-text {
-    margin: 0;
-    max-width: 80%;
-    text-align: center;
-    overflow-wrap: anywhere;
+    & .small-text {
+        margin: 0;
+        max-width: 80%;
+        text-align: center;
+        overflow-wrap: anywhere;
+    }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
