--- a/web/src/styles/components/UI/Project.scss
+++ b/web/src/styles/components/UI/Project.scss
@@ -14,7 +14,13 @@
     position: relative;
     padding-top: 65%;
     width: 100%;
-    transition: .3s;
+    transition: 0.3s;
+
+    &:hover {
+        & .project-image-preview {
+            transform: rotate(-5deg);
+        }
+    }
 }
 
 .not_scrolled {
@@ -41,7 +47,7 @@
     flex-shrink: 0;
     flex: 1;
     overflow: hidden;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .project-buttons {
@@ -60,42 +66,42 @@
     align-items: center;
     width: 50px;
     height: 50px;
-    box-shadow: 0 4px 4px #4F4F4F;
+    box-shadow: 0 4px 4px #4f4f4f;
     background-color: rgba(77, 77, 77, 0.33);
-    border: 1px solid rgba(255, 255, 255, 0.50);
+    border: 1px solid var(--additional-color-3);
     border-radius: 100%;
     cursor: pointer;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .project-link-button-icon {
     width: 31px;
-    fill: #ffffff;
-    transition: .3s;
+    fill: var(--white);
+    transition: 0.3s;
 }
 
 .project-link:hover {
-    background-color: #FFF;
-    border: 1px solid rgba(255, 255, 255, 0.50);
+    background-color: var(--white);
+    border: 1px solid var(--additional-color-3);
+
+    & .project-link-button-icon {
+        fill: var(--black);
+    }
 }
 
-.project-link:hover .project-link-button-icon {
-    fill: #000000;
-}
-
-.project-checkout-button-icon{
+.project-checkout-button-icon {
     width: 20px;
-    fill: #ffffff;
-    transition: .3s;
+    fill: var(--white);
+    transition: 0.3s;
 }
 
 .project-checkout:hover {
-    background-color: #FFF;
-    border: 1px solid rgba(255, 255, 255, 0.50);
-}
+    background-color: var(--white);
+    border: 1px solid var(--additional-color-3);
 
-.project-checkout:hover .project-checkout-button-icon {
-    fill: #000000;
+    & .project-checkout-button-icon {
+        fill: var(--black);
+    }
 }
 
 .project-image-preview {
@@ -106,11 +112,7 @@
     left: 0;
     right: 0;
     transform: rotate(-15deg);
-    transition: .3s;
-}
-
-.inner-container:hover .project-image-preview {
-    transform: rotate(-5deg);
+    transition: 0.3s;
 }
 
 .project-tags-block {
@@ -124,25 +126,25 @@
     display: flex;
     color: #d9d9d9;
     cursor: pointer;
-    background-color: rgba(255,255,255,.1);
-    border-top: 1px solid rgba(255,255,255,.75);
-    border-left: 1px solid rgba(255,255,255,.75);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.75);
+    border-left: 1px solid rgba(255, 255, 255, 0.75);
     border-radius: 8rem;
     padding: 0.15rem 0.55rem 0.15rem 0.5rem;
     font-size: 1rem;
-    font-family: 'Inconsolata';
+    font-family: "Inconsolata";
     font-weight: 700;
     gap: 10px;
-    transition: all .2s;
-}
+    transition: all 0.2s;
 
-.project-tag:hover {
-    background-color: rgba(255,255,255,.2);
-}
+    & img {
+        max-width: 30px;
+        max-height: 95%;
+    }
 
-.project-tag img {
-    max-width: 30px;
-    max-height: 95%;
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+    }
 }
 
 @media (min-width: 992px) {
