--- a/web/src/styles/components/UI/Question.scss
+++ b/web/src/styles/components/UI/Question.scss
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     border-radius: 16px;
-    border: 1px solid #FFF;
+    border: 1px solid var(--white);
     background: rgba(97, 97, 97, 0.41);
 }
 
@@ -14,37 +14,40 @@
     position: relative;
     padding: 20px;
     cursor: pointer;
-    transition: .3s;
-}
+    transition: 0.3s;
 
-.question::before {
-    position: absolute;
-    content: "+";
-    right: 20px;
-    bottom: 0;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 60px;
-    transition: .3s;
+    & .question-caret {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        pointer-events: none;
+        transform: translate(0, -50%);
+        transition: 0.3s;
+    }
+
+    &.active {
+        & .question-caret {
+            transform: translate(0, -50%) rotate(45deg);
+        }
+
+        & ~ .answer {
+            padding: 20px;
+            overflow: auto;
+            max-height: 150px;
+        }
+    }
 }
 
 .answer {
     max-height: 0;
     overflow: hidden;
     overflow-wrap: break-word;
-    transition: .3s;
-}
-
-.question.active::before {
-    transform: rotate(45deg);
-}
-
-.question.active ~ .answer {
-    padding: 20px;
-    overflow: auto;
-    max-height: 150px;
+    transition: 0.3s;
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
