--- a/web/src/styles/pages/MakeOrder.scss
+++ b/web/src/styles/pages/MakeOrder.scss
@@ -7,6 +7,8 @@
     box-sizing: border-box;
     padding-top: 150px;
     gap: 150px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .make-order-text {
@@ -15,11 +17,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
 
-.make-order-text p {
-    margin: 0;
-    text-align: center;
+    & p {
+        margin: 0;
+        text-align: center;
+    }
 }
 
 .make-order-content {
@@ -27,14 +29,38 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    border-top: 1px solid rgba(255,255,255,.5);
-    border-left: 1px solid rgba(255,255,255,.5);
-    background-color: rgba(26,26,26,.9);
+    border-top: 1px solid var(--additional-color-3);
+    border-left: 1px solid var(--additional-color-3);
+    background-color: var(--background-additional-color);
     border-radius: 16px;
     padding: 50px 20px;
     box-sizing: border-box;
     gap: 50px;
     z-index: 1;
+
+    &::before {
+        content: "";
+        position: absolute;
+        opacity: 0.05;
+        background-image: linear-gradient(300deg, transparent, var(--white));
+        border-radius: 0.625rem;
+        margin-top: -1px;
+        margin-left: -1px;
+        top: 0%;
+        bottom: 0%;
+        left: 0%;
+        right: 0%;
+        z-index: -1;
+    }
+
+    & .mid-text {
+        margin: 0;
+    }
+
+    & p {
+        max-width: 90%;
+        overflow-wrap: anywhere;
+    }
 }
 
 .make-order-first-part {
@@ -42,35 +68,16 @@
     padding-bottom: 2rem;
 }
 
-.make-order-content::before {
-    content: "";
-    position: absolute;
-    opacity: .05;
-    background-image: linear-gradient(300deg,transparent,#fff);
-    border-radius: 0.625rem;
-    margin-top: -1px;
-    margin-left: -1px;
-    top: 0%;
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
-    z-index: -1;
-}
-
-.make-order-content .mid-text {
-    margin: 0;
-}
-
 .required {
     width: max-content;
-}
 
-.required::before {
-    position: absolute;
-    content: "*";
-    color: #ff8766;
-    right: -20px;
-    top: -50%;
+    &::before {
+        position: absolute;
+        content: "*";
+        color: #ff8766;
+        right: -20px;
+        top: -50%;
+    }
 }
 
 .category-list {
@@ -82,9 +89,9 @@
 
 .form_checkbox {
     max-width: max-content;
-    opacity: .3;
+    opacity: 0.3;
     position: relative;
-    background-color: rgba(26,26,26,.15);
+    background-color: rgba(26, 26, 26, 0.15);
     border-radius: 0.25rem;
     align-items: center;
     margin: 0;
@@ -93,16 +100,20 @@
     align-items: center;
     overflow: hidden;
     cursor: pointer;
-    border: 1px solid #ffffff;
+    border: 1px solid var(--white);
     border-radius: 0.25rem;
     margin: 0;
-    transition: .3s;
-}
+    transition: 0.3s;
 
-.form_checkbox.active {
-    opacity: 1;
-    background-color: transparent;
-    background-image: linear-gradient(135deg,rgba(255,255,255,.15),transparent);
+    &.active {
+        opacity: 1;
+        background-color: transparent;
+        background-image: linear-gradient(
+            135deg,
+            var(--additional-color-2),
+            transparent
+        );
+    }
 }
 
 .list-item-dates {
@@ -130,9 +141,9 @@
 
 #additional-project-info {
     width: 100%;
-    color: #fff;
-    background-color: rgba(255,255,255,.05);
-    border: 2px solid rgba(255,255,255,.15);
+    color: var(--white);
+    background-color: var(--additional-color-1);
+    border: 2px solid var(--additional-color-2);
     border-radius: 0.25rem;
     margin-bottom: 1.5rem;
     padding: 0.5rem 1rem;
@@ -143,18 +154,13 @@
 .order-input {
     width: 100%;
     min-height: 3.5rem;
-    color: #fff;
-    background-color: rgba(255,255,255,.05);
-    border: 2px solid rgba(255,255,255,.15);
+    color: var(--white);
+    background-color: var(--additional-color-1);
+    border: 2px solid var(--additional-color-2);
     border-radius: 0.25rem;
     margin-bottom: 1.5rem;
     padding: 0.5rem 1rem;
     font-size: 1rem;
-}
-
-.make-order-category p {
-    max-width: 90%;
-    overflow-wrap: anywhere;
 }
 
 .make-order-category-input {
@@ -167,10 +173,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-}
 
-.make-order-input-container p {
-    margin: 0;
+    & p {
+        margin: 0;
+    }
 }
 
 .make-order-block-button {
@@ -182,14 +188,10 @@
 }
 
 .make-order-block-button.error {
-    color: #ff7676;
+    color: var(--error-color);
 }
 
 @media (max-width: 1199px) {
-    .make-order {
-        overflow-x: hidden;
-    }
-
     .make-order-text,
     .make-order-content {
         width: 85%;
@@ -201,4 +203,3 @@
         gap: 20px;
     }
 }
-
