--- a/web/src/styles/Default.scss
+++ b/web/src/styles/Default.scss
@@ -83,7 +83,7 @@ body,
 .App {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 #root {
@@ -157,12 +157,7 @@ body,
 
     &:hover {
         color: var(--background-color);
-        border: 1px solid
-            linear-gradient(
-                98deg,
-                var(--additional-primary-color),
-                var(--secondary-color)
-            );
+        border: 1px solid var(--additional-primary-color);
         background-position: 97%;
     }
 
@@ -244,7 +239,6 @@ body,
         color: #adadad;
         opacity: 0;
         top: 100%;
-        font-family: "Inconsolata";
         font-size: 25px;
         right: 20px;
         left: 20px;
@@ -252,6 +246,7 @@ body,
         border-top: 1px solid var(--white);
         border-left: 1px solid var(--white);
         padding: 10px;
+        font-weight: 300;
         transition: 0.3s;
     }
 
@@ -356,6 +351,7 @@ input[type="file"] {
     border-radius: 100%;
     background: var(--primary-color);
     filter: blur(50px);
+    -webkit-filter: blur(50px);
     opacity: 20%;
     z-index: 0;
 }
@@ -369,6 +365,15 @@ input[type="file"] {
         display: none;
         opacity: 0;
         content: "";
+    }
+
+    #cursor-seeker {
+        display: none;
+        opacity: 0;
+        width: 0;
+        height: 0;
+        filter: none;
+        -webkit-filter: none;
     }
 }
 
