--- a/web/src/styles/components/UI/Project.scss
+++ b/web/src/styles/components/UI/Project.scss
@@ -143,7 +143,7 @@
     }
 
     &:hover {
-        background-color: rgba(255, 255, 255, 0.2);
+        background-color: var(--additional-color-4);
     }
 }
 
