--- a/web/src/styles/pages/Main.scss
+++ b/web/src/styles/pages/Main.scss
@@ -247,6 +247,12 @@
     margin-bottom: 30px;
 }
 
+.we-can-offer-title {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .we-can-offer-title p {
     margin: 0;
     max-width: 50%;
@@ -258,7 +264,7 @@
     flex-wrap: wrap;
     justify-content: center;
     border-radius: 20px;
-    border: 2px solid rgba(255, 255, 255, 0.2);
+    border: 2px solid var(--additional-color-4);
     overflow: hidden;
 }
 
