--- a/web/src/styles/pages/MakeOrder.scss
+++ b/web/src/styles/pages/MakeOrder.scss
@@ -141,6 +141,7 @@
 
 #additional-project-info {
     width: 100%;
+    height: 200px;
     color: var(--white);
     background-color: var(--additional-color-1);
     border: 2px solid var(--additional-color-2);
@@ -153,7 +154,7 @@
 
 .order-input {
     width: 100%;
-    min-height: 3.5rem;
+    min-height: 35px;
     color: var(--white);
     background-color: var(--additional-color-1);
     border: 2px solid var(--additional-color-2);
