--- a/web/src/styles/components/Navbar.scss
+++ b/web/src/styles/components/Navbar.scss
@@ -17,7 +17,7 @@
     background-color: var(--background-color) 7d;
     gap: 100px;
     box-sizing: border-box;
-    z-index: 20;
+    z-index: 19;
     -webkit-backdrop-filter: blur(50px);
     backdrop-filter: blur(50px);
     overflow-x: hidden;
@@ -90,10 +90,46 @@
     }
 }
 
-.navbar-mobile-button {
+.navbar-mobile {
     position: fixed;
-    top: 20px;
-    right: 20px;
+    width: 100%;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 20px;
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: solid;
+    border-image: linear-gradient(
+            90deg,
+            var(--transparent-color) 0%,
+            var(--white) 50%,
+            var(--transparent-color) 100%
+        )
+        0 0 1 0;
+    background-color: var(--background-color) 7d;
+    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
+    z-index: 20;
+
+    & .logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & a {
+            font-size: 20px !important;
+        }
+
+        & img {
+            max-width: 35px;
+            max-height: 80%;
+        }
+    }
+}
+
+.navbar-mobile-button {
     display: flex;
     justify-content: center;
     align-items: center;
