--- a/web/src/styles/components/UI/Offer.scss
+++ b/web/src/styles/components/UI/Offer.scss
@@ -3,7 +3,7 @@
     width: 30%;
     flex: auto;
     flex-shrink: 0;
-    outline: 1px solid rgba(255, 255, 255, 0.2);
+    outline: 1px solid var(--additional-color-4);
     display: flex;
     flex-direction: column;
     align-items: center;
