--- a/web/src/styles/components/UI/Question.scss
+++ b/web/src/styles/components/UI/Question.scss
@@ -15,6 +15,8 @@
     padding: 20px 60px 20px 20px;
     cursor: pointer;
     overflow-wrap: break-word;
+    font-size: 32px;
+    font-weight: 600;
     transition: 0.3s;
 
     & .question-caret {
