Fixed some adaptation bugs

--- a/web/src/styles/Default.scss
+++ b/web/src/styles/Default.scss
@@ -28,6 +28,7 @@
     --additional-color-1: rgba(255, 255, 255, 0.05);
     --additional-color-2: rgba(255, 255, 255, 0.15);
     --additional-color-3: rgba(255, 255, 255, 0.5);
+    --additional-color-4: rgba(255, 255, 255, 0.2);
 }
 
 .light {
@@ -50,6 +51,7 @@
     --additional-color-1: rgba(0, 0, 0, 0.05);
     --additional-color-2: rgba(0, 0, 0, 0.15);
     --additional-color-3: rgba(0, 0, 0, 0.5);
+    --additional-color-4: rgba(0, 0, 0, 0.2);
 }
 
 ::-webkit-scrollbar {
@@ -129,81 +131,9 @@ body,
     text-decoration: none;
 }
 
-.button {
-    display: inline-flex;
-    height: 63px;
-    width: 250px;
-    max-width: 300px;
-    padding: 0 27px;
-    font-weight: 700;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    gap: 10px;
-    flex-shrink: 0;
-    background: linear-gradient(
-        98deg,
-        var(--transparent-color) 50%,
-        var(--additional-primary-color) 50.71%,
-        var(--secondary-color) 110%
-    );
-    border: 1px solid var(--additional-primary-color);
-    background-size: 255%;
-    color: var(--secondary-color);
-    font-size: 25px;
-    cursor: pointer;
-    transition: 0.3s;
-
-    &:hover {
-        color: var(--background-color);
-        border: 1px solid var(--additional-primary-color);
-        background-position: 97%;
-    }
-
-    &:disabled {
-        display: inline-flex;
-        height: 63px;
-        padding: 0 27px;
-        margin: 0;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        gap: 10px;
-        flex-shrink: 0;
-        background: linear-gradient(
-            98deg,
-            var(--transparent-color) 50%,
-            #4b4b4b 50.71%,
-            #a8a8a8 110%
-        );
-        border: 1px solid #a8a8a8;
-        background-size: 255%;
-        color: #4b4b4b;
-        font-size: 25px;
-        cursor: pointer;
-        transition: 0.3s;
-
-        &:hover {
-            color: var(--background-color);
-            border: 1px solid linear-gradient(98deg, #4b4b4b, a8a8a8);
-            background-position: 97%;
-        }
-    }
-
-    &.fill {
-        color: var(--background-color);
-        background: linear-gradient(
-            98deg,
-            var(--additional-primary-color) 4.71%,
-            var(--secondary-color) 101.04%
-        );
-        border: 1px solid var(--additional-primary-color);
-    }
-}
-
 .codesynth-text {
     position: relative;
+    width: max-content;
     background-image: linear-gradient(90deg, var(--white), var(--white));
     background-clip: text;
     -webkit-background-clip: text;
@@ -248,10 +178,16 @@ body,
         padding: 10px;
         font-weight: 300;
         transition: 0.3s;
+        pointer-events: none;
     }
 
     &.no-table::after {
         display: none;
+        width: 0;
+        height: 0;
+        opacity: 0;
+        content: "";
+        user-select: none;
     }
 
     &:hover {
@@ -290,7 +226,7 @@ body,
 }
 
 input[type="date"] {
-    min-height: 3.5rem;
+    min-height: 35px;
     color: var(--white);
     background-color: var(--additional-color-1);
     border: 2px solid var(--additional-color-2);
@@ -309,7 +245,7 @@ input[type="file"] {
 
     & .upload {
         width: 100%;
-        min-height: 3.5rem;
+        min-height: 35px;
         fill: var(--white);
         color: var(--white);
         background-color: var(--additional-color-1);
@@ -423,13 +359,6 @@ input[type="file"] {
     }
 }
 
-@media (min-width: 481px) and (max-width: 991px) {
-    .button {
-        height: 53px;
-        font-size: 20px;
-    }
-}
-
 @media (max-width: 480px) {
     .biggest-text {
         font-size: 52px;
@@ -445,11 +374,5 @@ input[type="file"] {
 
     .small-text {
         font-size: 20px;
-    }
-
-    .button {
-        width: 120px;
-        height: 32px;
-        font-size: 12px;
     }
 }
