--- a/web/src/styles/components/UI/Offer.scss
+++ b/web/src/styles/components/UI/Offer.scss
@@ -3,7 +3,7 @@
     width: 30%;
     flex: auto;
     flex-shrink: 0;
-    outline: 1px solid rgba(255, 255, 255, 0.2);
+    outline: 1px solid var(--additional-color-4);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,6 +31,7 @@
     & img {
         width: 100%;
         height: 100%;
+        border-radius: 100%;
     }
 }
 
@@ -45,6 +46,7 @@
         max-width: 100%;
         text-align: center;
         overflow-wrap: anywhere;
+        font-size: 45px;
     }
 
     & .small-text {
@@ -82,5 +84,9 @@
 @media (max-width: 480px) {
     .offer-block {
         width: 300px;
+    }
+
+    .offer-block-text .big-text {
+        font-size: 30px;
     }
 }
