--- a/web/src/styles/components/UI/Button.scss
+++ b/web/src/styles/components/UI/Button.scss
@@ -55,3 +55,19 @@
         }
     }
 }
+
+@media (max-width: 480px) {
+    .button {
+        height: 35px;
+
+        &-foreground {
+            font-size: 20px;
+        }
+    }
+}
+
+@media (max-width: 300px) {
+    .button-foreground {
+        font-size: 15px;
+    }
+}
