--- a/web/src/styles/components/UI/Offer.scss
+++ b/web/src/styles/components/UI/Offer.scss
@@ -57,35 +57,20 @@
     }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (max-width: 1199px) {
     .offer-block {
         width: 300px;
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
-    .offer-block {
-        width: 300px;
-    }
-}
-
-@media (min-width: 651px) and (max-width: 767px) {
-    .offer-block {
-        width: 300px;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 650px) {
-    .offer-block {
-        width: 300px;
+@media (max-width: 991px) {
+    .offer-icon {
+        width: 50px;
+        height: 50px;
     }
 }
 
 @media (max-width: 480px) {
-    .offer-block {
-        width: 300px;
-    }
-
     .offer-block-text .big-text {
         font-size: 30px;
     }
