--- a/web/src/styles/Default.scss
+++ b/web/src/styles/Default.scss
@@ -102,7 +102,7 @@ body,
 
 .biggest-text {
     position: relative;
-    font-size: 200px;
+    font-size: 120px;
     font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
@@ -178,6 +178,7 @@ body,
         padding: 10px;
         font-weight: 300;
         transition: 0.3s;
+        text-transform: initial;
         pointer-events: none;
     }
 
@@ -245,6 +246,8 @@ input[type="file"] {
 
     & .upload {
         width: 100%;
+        display: flex;
+        align-items: center;
         min-height: 35px;
         fill: var(--white);
         color: var(--white);
@@ -258,6 +261,15 @@ input[type="file"] {
         display: flex;
         align-items: center;
         gap: 5px;
+
+        & p {
+            margin: 0;
+        }
+
+        & svg,
+        p {
+            pointer-events: none;
+        }
 
         &:hover {
             fill: var(--primary-color);
