--- a/web/src/styles/pages/MakeOrder.scss
+++ b/web/src/styles/pages/MakeOrder.scss
@@ -75,8 +75,8 @@
         position: absolute;
         content: "*";
         color: #ff8766;
-        right: -20px;
-        top: -50%;
+        right: -15px;
+        top: -5px;
     }
 }
 
@@ -159,7 +159,6 @@
     background-color: var(--additional-color-1);
     border: 2px solid var(--additional-color-2);
     border-radius: 0.25rem;
-    margin-bottom: 1.5rem;
     padding: 0.5rem 1rem;
     font-size: 1rem;
 }
@@ -174,6 +173,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 1.5rem;
 
     & p {
         margin: 0;
