--- a/web/src/styles/components/pages/main/OurServicesContent.scss
+++ b/web/src/styles/components/pages/main/OurServicesContent.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 100px;
+    box-sizing: border-box;
 
     & p {
         margin: 0;
