--- a/web/src/styles/components/pages/main/FAQS.scss
+++ b/web/src/styles/components/pages/main/FAQS.scss
@@ -2,6 +2,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    padding-top: 125px;
+    box-sizing: border-box;
 }
 
 .questions-header {
@@ -45,5 +47,6 @@
 @media (max-width: 480px) {
     .questions-container {
         width: 90%;
+        padding-top: 80px;
     }
 }
