--- a/web/src/styles/components/pages/main/PortfolioBlock.scss
+++ b/web/src/styles/components/pages/main/PortfolioBlock.scss
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-top: 50px;
+    box-sizing: border-box;
 }
 
 .projects-text {
