--- a/web/src/styles/components/pages/main/WCOC.scss
+++ b/web/src/styles/components/pages/main/WCOC.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 125px;
+    box-sizing: border-box;
 }
 
 .we-can-offer-header {
@@ -136,6 +138,7 @@
 @media (max-width: 480px) {
     .we-can-offer-block {
         width: 90%;
+        padding-top: 85px;
     }
 
     .we-can-offer-header {
