--- a/web/src/styles/pages/MakeOrder.scss
+++ b/web/src/styles/pages/MakeOrder.scss
@@ -1,12 +1,11 @@
 .make-order {
     width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     box-sizing: border-box;
     padding-top: 150px;
-    gap: 150px;
+    gap: 100px;
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -74,7 +73,7 @@
     &::before {
         position: absolute;
         content: "*";
-        color: #ff8766;
+        color: var(--required-input);
         right: -15px;
         top: -5px;
     }
