--- a/web/src/styles/components/UI/Language.scss
+++ b/web/src/styles/components/UI/Language.scss
@@ -38,7 +38,8 @@
 .technology-tech-small {
     display: flex;
     align-items: center;
-    justify-content: center;
+    height: 73px;
+    justify-content: flex-end;
     flex-direction: column;
     gap: 5px;
     filter: brightness(0.5) saturate(0%);
@@ -50,6 +51,7 @@
     & img {
         max-width: 50px;
         max-height: 50px;
+        user-select: none;
     }
 
     &:hover {
