--- a/web/src/styles/components/UI/Project.scss
+++ b/web/src/styles/components/UI/Project.scss
@@ -124,22 +124,22 @@
 
 .project-tag {
     display: flex;
-    color: #d9d9d9;
-    cursor: pointer;
+    align-items: center;
+    color: var(--white);
     background-color: rgba(255, 255, 255, 0.1);
     border-top: 1px solid rgba(255, 255, 255, 0.75);
     border-left: 1px solid rgba(255, 255, 255, 0.75);
     border-radius: 8rem;
     padding: 0.15rem 0.55rem 0.15rem 0.5rem;
     font-size: 1rem;
-    font-family: "Inconsolata";
     font-weight: 700;
     gap: 10px;
+    cursor: pointer;
     transition: all 0.2s;
 
     & img {
         max-width: 30px;
-        max-height: 95%;
+        max-height: 30px;
     }
 
     &:hover {
