--- a/web/src/styles/components/pages/main/PortfolioBlock.scss
+++ b/web/src/styles/components/pages/main/PortfolioBlock.scss
@@ -71,9 +71,11 @@
     border-radius: 6px;
     padding: 5px 0;
     box-shadow: 0 0 5px var(--black);
+    transform: scale(0%);
     transition: 0.3s;
 
     &.active {
+        transform: scale(100%);
         opacity: 1;
     }
 }
