--- a/web/src/styles/Default.scss
+++ b/web/src/styles/Default.scss
@@ -299,7 +299,7 @@ textarea {
 }
 
 #cursor-seeker {
-    position: absolute;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
